# trail-running-time-predictor

./: .gitignore  README.md  check_secrets.py  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: azure-static-web-apps-delightful-moss-0b43d1c03.yml  azure-static-web-apps.yml  monthly_training.yml
app/: constants.py
app/config/: settings.py
app/data_ingestion/: __init__.py  data_ingestion_pipeline.py  strava_client.py
app/feature_engineering/: __init__.py  features.py  pipeline.py  point_extractor.py  segment_features.py
app/ml/: __init__.py
backend/: .env.example  .gitignore  Dockerfile  requirements.txt
backend/app/: main.py  schemas.py
backend/models/: model_latest.joblib
backend/notebooks/: eda.ipynb  model_comparison_test.ipynb
backend/results/: model_draft_comparison.json  models_compare_history.json  variability_analysis.txt
backend/scripts/: _analyze_race_reliability.py  analyze_temporal_split.py  build_dataset.py  build_training_dataset_from_strava.py  check_strava_workout_types.py  get_new_token.py  hypothesis_testing_train_test.py  inspect_strava_fields.py  power_analysis.py  run_feature_engineering.py  run_model_comparison.py  run_model_training.py  run_segment_pipeline_async.py  run_strava_training_pipeline.py  test_data_initialization.py  test_distance_calculation.py  test_generate_gpx.py  test_monthly_update_logic.py  test_refactored_features.py  test_single_gpx.py  upload_initial_parquet_to_blob.py  upload_segments_parquet_to_blob.py
frontend/: index.html
scripts/: monthly_training.py
(+33 files in other folders)
