[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-running-core"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "gpxpy>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    "scikit-learn",
    "xgboost",
    "shap",
    "joblib",
    "scipy"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

azure = [
    "azure-storage-blob>=12.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]