[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-running-core"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "pandas==2.3.3",
    "pyarrow==23.0.0",
    "numpy==2.4.0",
    "requests==2.32.5",
    "gpxpy==1.6.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "scikit-learn==1.8.0",
    "xgboost==3.2.0",
    "shap==0.50.0",
    "joblib==1.5.3",
    "scipy==1.16.3"
]

[project.optional-dependencies]
api = [
    "fastapi==0.127.0",
    "uvicorn==0.40.0"
]

azure = [
    "azure-storage-blob==12.28.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]